Name: mvc
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-MVC-Library/issues
Synopsis: Model-view-controller
Description: Use the @mvc@ library to distill concurrent programs into pure and
  single-threaded programs using the @Model@-@View@-@Controller@ pattern.  This
  transformation lets you:
  .
  * replay your program deterministically,
  .
  * do property-based testing of your model (like @QuickCheck@), and:
  .
  * equationally reason about your pure core.
Category: Control, Concurrency
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-MVC-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base              >= 4       && < 5  ,
        async             >= 2.0.0   && < 2.1,
        contravariant                   < 0.5,
        mmorph            >= 1.0.0   && < 1.1,
        pipes             >= 4.0.0   && < 4.2,
        pipes-concurrency >= 2.0.1   && < 2.1,
        transformers      >= 0.2.0.0 && < 0.4 
    Exposed-Modules:
        MVC,
        MVC.Prelude
    GHC-Options: -O2 -Wall
